syntax = "proto3";

//import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";

package backend;

service Orders {
  rpc Add (Order) returns (Order) {}
  rpc Get (OrderRequest) returns (Order) {}
  rpc Update (Order) returns (Order) {}
  rpc List (Order) returns (OrderList) {}
  rpc Delete (OrderRequest) returns (Order) {}
}

message Order {
  string id = 1;  
  //freight type
  string type = 2;
  Position from = 3;
  repeated Position tos = 4;
  float fee = 5;
  Contact contact = 6;
  map<string,string> annotations = 7;
  uint64 created = 8;
  string driverId = 9;
  string status = 10;
}

message Position {
  string name = 1;
  string location = 2;
  string address = 3;
}

message Contact {
  string name = 1;
  string tel = 2;
}

message OrderRequest {
  string id = 1;
}

message OrderList {
  repeated Order items = 1;
}